--- a/クイズ/manifest.json
+++ b/クイズ/manifest.json
@@ -11,7 +11,7 @@
       "title": "ココイチ ライス量 ↔ ソース量・お玉 クイズ",
       "updated": "2025-09-16",
       "category": "オペレーション/配膳",
-      "pdf": "pdf/定量・辛味・加熱時間.pdf"   ← ★ここ！
+      "pdf": "PDF/定量・辛味・加熱時間.pdf"   ← ★ここ！
     }
   ]
 }
